[package]
name = "EntroRS"
version = "2.1.0"
edition = "2021"
description = "Zararlı Yazılım Statik Analiz Aracı - Entropy Checker"
authors = ["Security Researcher"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
goblin = "0.9"
regex = "1"
chrono = "0.4"
